--- a/index.html
+++ b/index.html
@@ -6,5 +6,24 @@
     <title>Poem Flexbox Example</title>
   </head>
   <body>
+    <p>A force de m'écrire<br>
+Je me découvre un peu<br>
+      Je recherche l'Autre</p>
+    <p>A perte de vue
+Regarde
+
+Si les rives t'établissent
+      Ton fleuve coule à la mer</p>
+    <p>Ayant perdu la trame du fleuve Étouffé les senteurs d'océan
+
+De raccrocs en saccades
+De mirages en décors
+Loin du largo des jours
+
+L'homme
+Séparé du
+Chant
+
+      S'égare dans l'âpre canal des mots dépeuplés.</p>
   </body>
 </html>
